Added profile dev/prod to docker file + documentation

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,22 +1,21 @@
 version: '3.7'
 services:
-  mongo:
+
+  ds-mongo:
     image: mongo:latest
-    container_name: "mongo"
+    container_name: "ds-mongo"
     restart: always
     environment:
       MONGO_INITDB_DATABASE: ${DATABASE_NAME}
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
-    # ports:
-    #  - 27017:27017
     volumes:
-    #  - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+    # - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
       - mongodb_data_container:/data/db
   
-  traefik:
+  ds-traefik-prod:
+    profiles: ["prod"]
     image: "traefik:v2.6"
-    container_name: "traefik"
     command:
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
@@ -35,7 +34,23 @@ services:
       - "./letsencrypt:/letsencrypt"
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
 
-  backend:
+  ds-traefik-dev:
+    profiles: ["dev"]
+    image: "traefik:v2.6"
+    command:
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entrypoints.web.address=:80"
+      - "--api.insecure=true"
+    ports:
+      - "80:80/tcp"
+      - "8080:8080"
+    volumes:
+      - "./letsencrypt:/letsencrypt"
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+
+  ds-backend-prod:
+    profiles: ["prod"]
     build:
       context: ./digital-signature-backend
     labels:
@@ -55,10 +70,33 @@ services:
       # JWT_SECRET: ${JWT_SECRET}
     restart: always
     depends_on: 
-      - mongo
-      - traefik
+      - ds-mongo
+      - ds-traefik-prod
 
-  frontend:
+  ds-backend-dev:
+    profiles: ["dev"]
+    build:
+      context: ./digital-signature-backend
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.backend.entrypoints=web"
+      - "traefik.http.routers.backend.rule=PathPrefix(`/api/`)"
+      - "traefik.http.services.backend.loadbalancer.server.port=3000"
+    environment:
+      PORT: 3000
+      # DATABASE_NAME: ${DATABASE_NAME}
+      # IOTA_HORNET_NODE: ${IOTA_HORNET_NODE}
+      # IOTA_PERMA_NODE: ${IOTA_PERMA_NODE}
+      # DATABASE_URL: ${DATABASE_URL}
+      # SERVER_SECRET: ${SERVER_SECRET}
+      # JWT_SECRET: ${JWT_SECRET}
+    restart: always
+    depends_on: 
+      - ds-mongo
+      - ds-traefik-dev
+
+  ds-frontend-prod:
+    profiles: ["prod"]
     build:
       context: ./digital-signature
     labels:
@@ -78,17 +116,30 @@ services:
     restart: on-failure
     # command: node dist/index.js setup-api
     depends_on: 
-      - mongo
-      - traefik
+      - ds-mongo
+      - ds-traefik-prod
 
-  # whoami:
-  #   image: "traefik/whoami"
-  #   # container_name: "simple-service"
-  #   labels:
-  #     - "traefik.enable=true"
-  #     - "traefik.http.routers.whoami.rule=Host(`${NODE_HOST}`)"
-  #     - "traefik.http.routers.whoami.entrypoints=websecure"
-  #     - "traefik.http.routers.whoami.tls.certresolver=myresolver"    
+  ds-frontend-dev:
+    profiles: ["dev"]
+    build:
+      context: ./digital-signature
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.frontend.entrypoints=web"
+      - "traefik.http.routers.frontend.rule=PathPrefix(`/`)"
+      - "traefik.http.services.frontend.loadbalancer.server.port=3000"
+    # environment:
+    #   DATABASE_NAME: ${DATABASE_NAME}
+    #   IOTA_HORNET_NODE: ${IOTA_HORNET_NODE}
+    #   IOTA_PERMA_NODE: ${IOTA_PERMA_NODE}
+    #   DATABASE_URL: ${DATABASE_URL}
+    #   SERVER_SECRET: ${SERVER_SECRET}
+    #   JWT_SECRET: ${JWT_SECRET}
+    restart: on-failure
+    # command: node dist/index.js setup-api
+    depends_on: 
+      - ds-mongo
+      - ds-traefik-dev
 
 volumes:
   mongodb_data_container:
