--- a/digital-signature-backend/Dockerfile
+++ b/digital-signature-backend/Dockerfile
@@ -16,7 +16,7 @@ COPY . .
 RUN go mod download
 RUN go mod verify
 
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o /digital-signature-backend ./src/main.go
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o /digital-signature-backend ./cmd/digital-signature-backend/main.go
 
 FROM scratch
 
