--- a/digital-signature/package.json
+++ b/digital-signature/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 3000 --host 0.0.0.0",
+    "dev": "vite --port ${PORT:-3000} --host 0.0.0.0",
     "build": "vite build",
     "preview": "vite preview --port 3000 --host 0.0.0.0"
   },
@@ -14,6 +14,10 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
-    "@noble/ed25519": "^1.7.1"
+    "@noble/ed25519": "^1.7.1",
+    "bootstrap-icons": "^1.9.1",
+    "moment": "^2.29.4",
+    "qrcode": "^1.5.1",
+    "sveltestrap": "^5.9.0"
   }
 }
