--- a/ui/signer/package.json
+++ b/ui/signer/package.json
@@ -37,18 +37,13 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
-		"vitest": "^0.32.2",
-		"workbox-cli": "^7.0.0",
-		"workbox-precaching": "^7.0.0",
-		"workbox-routing": "^7.0.0",
-		"workbox-strategies": "^7.0.0"
+		"vitest": "^0.32.2"
 	},
 	"type": "module",
 	"dependencies": {
 		"@noble/curves": "^1.2.0",
 		"@noble/ed25519": "^2.0.0",
 		"bip39": "^3.1.0",
-		"bootstrap-icons": "^1.10.5",
 		"buffer": "^6.0.3",
 		"flowbite-svelte-icons": "^0.3.6",
 		"path-browserify": "^1.0.1",
